Fix opacity getting stuck when clicking on a new window while it's being created

While the window is being created, it's going through an opacity animation. Clicking
on the window's title bar at this point, starts a drag. We must store the target
opacity (rather than the current one) to be able to set it on drag completion, otherwise
the window opacity will be stuck to its value at the time of the click.

BUG=687003

Review-Url: https://codereview.chromium.org/2666413002
Cr-Commit-Position: refs/heads/master@{#448352}

Former-commit-id: 1b08650cd63cbd6fa11cc5a840d716a3b945306b