ash/common/wm/drag_details.cc
@@ -50,7 +50,10 @@ DragDetails::DragDetails(WmWindow* window,
     : initial_state_type(window->GetWindowState()->GetStateType()),
       initial_bounds_in_parent(window->GetBounds()),
       initial_location_in_parent(location),
-      initial_opacity(window->GetLayer()->opacity()),
+      // When drag starts, we might be in the middle of a window opacity
+      // animation, on drag completion we must set the opacity to the target
+      // opacity rather than the current opacity (crbug.com/687003).
+      initial_opacity(window->GetLayer()->GetTargetOpacity()),
       window_component(window_component),
       bounds_change(
           WindowResizer::GetBoundsChangeForWindowComponent(window_component)),
